fix audio error on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@
 
   .App{
     padding-top: 0;
+    margin-top: 0;
     height: 115vh;
     max-width: fit-content;
   }
